fix wrapping on giphy modal

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,10 @@ body {
 
 #giphy-body {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    align-content: space-between;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
+    align-content: flex-start;
     flex-wrap: wrap;
 }
 
